--- a/src/Components/Sidebar/Music/music.css
+++ b/src/Components/Sidebar/Music/music.css
@@ -85,7 +85,7 @@
 }
 
 .music-box-div {
-    padding: 3.75rem 1.875rem 3.125rem;
+    padding: 3.75rem 1rem 3.125rem;
     border: 1px solid rgba(255, 255, 255, 0.2);
     background: rgba(255, 255, 255, 0.05);
     border-radius: 0.9375rem;
@@ -95,24 +95,12 @@
 }
 
 .music-box-img {
-    width: 10.625rem;
+    width: 12rem;
     display: flex;
-    margin: 0 auto 2.8125rem;
+    margin: 0 auto 2rem;
     border-radius: 50%;
-    animation: rotate 3s linear infinite;
-    transform-origin: 50% 50%;
-    transition: all 0.3s ease;
 }
 
-@keyframes rotate {
-    0% {
-        transform: rotate(0deg);
-    }
-
-    100% {
-        transform: rotate(360deg);
-    }
-}
 
 .music-box-h2 {
     color: white;
@@ -156,7 +144,8 @@
     border-radius: 0.9rem;
     cursor: pointer;
 }
-.mucis-panel1{
+
+.mucis-panel1 {
     padding: 7px;
     border-radius: 20px;
 }
@@ -220,6 +209,17 @@
     font-size: 1.125rem;
     cursor: pointer;
     color: white;
+}
+
+.music-fro-fav {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    gap: 10px;
+    flex-wrap: wrap;
+    padding: 0 6rem;
+        margin-bottom: 40px;
+
 }
 
 
@@ -309,6 +309,15 @@
         width: 85vw;
         padding: 0.9375rem;
     }
+
+    .music-fro-fav {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        gap: 0px;
+        flex-wrap: wrap;
+        padding: 30px 0;
+    }
 }
 
 @media (min-width: 768px) and (max-width: 1023px) {
@@ -346,5 +355,8 @@
     .music-co-new img {
         width: 5.625rem;
         height: 4.5rem;
+    }
+     .music-fro-fav {
+        margin-bottom: 40px;
     }
 }
